@@ -1,0 +1,12 @@
+        LIST    P=16F59
+        INCLUDE "p16f59.inc"
+
+	org	0
+
+	tris	PORTA
+	tris	PORTB
+	tris	PORTC
+	tris	PORTD
+	tris	PORTE
+
+	end
