@@ -1,4 +1,13 @@
 2022-02-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * libgputils/gpopcode.h,
+    gpasm/testsuite/gpasm.project/asmfiles/tris_12bit.asm,
+    gpasm/testsuite/gpasm.project/hexfiles/tris_12bit.hex,
+    gpasm/testsuite/gpasm.project/listfiles/tris_12bit.lst:
+    Fixed bug: "#314 PIC16F69 TRIS does not assemble correctly"
+    Thanks to John Dunton for the bugreport.
+    Thanks to Robert Pearce for the patch.
+
+2022-02-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/directive.c,
     gpasm/testsuite/regression/source/elif.asm:
     Fixed bug: "#318 ELIF is not ELSE IF, bug or unusual name?"
